fix saves names list vertical overflow behaviour

--- a/app/src/Components/SavingPopout/SavingPopout.css
+++ b/app/src/Components/SavingPopout/SavingPopout.css
@@ -9,9 +9,10 @@
 }
 
 .saving-popout__body__main__paper {
-    min-width: 440px;
-    max-width: 440px;
-    min-height: 196px;
+    width: 440px;
+    height: 196px;
+
+    overflow-y: scroll;
 }
 
 .saving-popout__save-name-input {
